# django-simple-graphql

./: .coveragerc  .flake8  .graphqlconfig  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  conftest.py  mypy.ini  pyproject.toml
example/: manage.py  models.py  schema.graphql  schema.py  settings.py
example/migrations/: 0001_initial.py  0002_add_secret.py  0003_add_superuseronly_model.py
example/test_utils/: client.py  introspection.py
example/tests/: test_auth.py  test_builder.py  test_fields.py  test_mutations.py  test_queries.py  test_schema.py
simple_graphql/auth/: auth.py  middleware.py
simple_graphql/django/: __init__.py  decorators.py  schema.py  types.py
simple_graphql/django/schema/: __init__.py  builder.py  exceptions.py  models.py  node.py  query.py  utils.py
simple_graphql/django/tests/: test_schema.py
