[tool.poetry]
name = "django-simple-graphql"
version = "0.1.0"
description = ""
authors = ["Joa Riski <joa.riski@riskidev.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
